<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zello SDK Sample</string>
    <string name="select_contact_title">Select a contact</string>
    <string name="contact_not_selected">Contact is not selected</string>
    <string name="talk_button">Push to talk</string>
    <string name="status_online">Online</string>
    <string name="status_busy">Busy</string>
    <string name="status_offline">Offline</string>
    <string name="status_standby">Standby</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_channel_users_count" formatted="false">Users online: %count%</string>
    <string name="status_group_users_count" formatted="false">Users online: %count%/%total%</string>
    <string name="message_connecting">Connecting…</string>
    <string name="message_receiving">Receiving…</string>
    <string name="message_sending">Sending…</string>
    <string name="ptt_app_not_installed">PTT app is not installed</string>
    <string name="ptt_app_initializing">Connecting to the PTT app…</string>
    <string name="ptt_app_configuring">PTT app is being configured…</string>
    <string name="ptt_app_is_signed_out">Offline</string>
    <string name="ptt_app_is_signing_in">Signing in…</string>
    <string name="ptt_app_is_signing_out">Signing out…</string>
    <string name="ptt_app_is_waiting_to_reconnect">Waiting for network to recover.</string>
    <string name="ptt_app_is_reconnecting" formatted="false">Reconnecting in %seconds%…</string>
    <string name="menu_available">Available</string>
    <string name="menu_solo">Solo</string>
    <string name="menu_busy">Busy</string>
    <string name="menu_set_status">Set status</string>
    <string name="menu_select_contact">Select contact</string>
    <string name="menu_lock_ptt_app">Lock PTT app</string>
    <string name="menu_unlock_ptt_app">Unlock PTT app</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_enable_auto_run">Enable auto-run</string>
    <string name="menu_disable_auto_run">Disable auto-run</string>
    <string name="menu_enable_auto_connect_channels">Enable channel auto-connect</string>
    <string name="menu_disable_auto_connect_channels">Disable channel auto-connect</string>
    <string name="menu_start_message">Start message</string>
    <string name="menu_stop_message">Stop message</string>
    <string name="menu_ptt_buttons">PTT buttons</string>
    <string name="menu_about">About</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_unmute">Unmute</string>
    <string name="menu_talk">Talk</string>
    <string name="button_close">Close</string>
    <string name="button_replay">Replay last message</string>
    <string name="button_sigin_in">Sign in</string>
    <string name="button_cancel">Cancel</string>
    <string name="channel_connect">Connect channel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="network">Network base URL</string>
    <string name="perishable">Do not save account data</string>
    <string name="about_description">About Zello SDK\nThis screen shows how to use the SDK when your app includes multiple activities.</string>
    <string name="audio_speaker">SPEAKER</string>
    <string name="audio_earpiece">EARPIECE</string>
    <string name="audio_bluetooth">BLUETOOTH</string>
    <string name="status_cancelling_signin">Cancelling sign in…</string>
    <string name="status_reconnecting" formatted="false">Reconnecting in %seconds% sec…</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_invalid_credentials">Invalid username or password.</string>
    <string name="error_invalid_network_name">Invalid network.</string>
    <string name="error_network_suspended">Network suspended.</string>
    <string name="error_secure_connect_failed">Can\'t establish a secure connection to the server.</string>
    <string name="error_server_signin_failed">Can\'t connect to the server.</string>
    <string name="error_network_signin_failed">Can\'t join the network.</string>
    <string name="error_kicked">You signed in on another device.</string>
    <string name="error_update_required">Client software update is required.</string>
    <string name="error_no_internet">No internet.</string>
    <string name="error_internet_restricted">Internet access is restricted.</string>
    <string name="error_server_license">Server license problem.</string>
    <string name="error_brute_force_protection">You\'ve used incorrect credentials too many times.</string>

</resources>
