<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/talk_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TalkActivity">

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dip"
        android:text="@string/ptt_app_not_installed"/>

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dip"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:lines="1"
            android:inputType="text|textNoSuggestions"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:lines="1"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/network_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/network"/>

        <EditText
            android:id="@+id/network"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="128"
            android:lines="1"
            android:inputType="text|textNoSuggestions"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_sigin_in"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#ffffff">

            <ListView
                android:id="@+id/contact_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/talk_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#dddddd">

                    <FrameLayout
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:clipChildren="false"
                        android:clipToPadding="false">

                        <include
                            layout="@layout/contact"
                            android:id="@+id/contact_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/contact_not_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/contact_not_selected"/>
                    </FrameLayout>

                    <ToggleButton
                        android:id="@+id/button_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/channel_connect"/>

                    <ImageButton
                        android:id="@+id/button_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/button_close"
                        android:src="@android:drawable/ic_delete"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dip"
                    android:orientation="horizontal">

                    <com.zello.sdk.sample.SquareButton
                        android:id="@+id/talk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="100dip"
                        android:maxWidth="100dip"
                        android:text="@string/talk_button"
                        android:background="@drawable/button_talk"
                        android:longClickable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/message_info"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:orientation="horizontal"
                    android:background="#dddddd"
                    android:visibility="invisible"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <ImageView
                        android:id="@+id/message_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:src="@drawable/message_in"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipChildren="false"
                        android:orientation="vertical">

                        <TextView
                            style="?attr/textStyle"
                            android:id="@+id/message_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/contact_image"/>

                        <TextView
                            style="?attr/textStyle"
                            android:id="@+id/message_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/contact_image"
                            android:layout_below="@+id/contact_name"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
